Fixed bug #24752 (Unhandled "uniqueidentifier" field type) Original Patch By: s.sonnenberg[at]coolspot.de